Fix a `letter-spacing`

--- a/src/less/chrome/han.less
+++ b/src/less/chrome/han.less
@@ -132,7 +132,7 @@ h-cs[hidden] {
 	visibility    : hidden;
 	content       : " ";
 	font          : .825em Courier;
-	letter-spacing: 0;
+	// letter-spacing: 0;
 	white-space   : normal;
 }
 
